--- a/package.json
+++ b/package.json
@@ -1,37 +1,18 @@
 {
-  "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.7.4",
-    "babel-eslint": "^6.0.0",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "cssnext-loader": "^1.0.1",
-    "eslint": "^3.3.0",
-    "eslint-config-airbnb": "^10.0.1",
-    "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.15.0",
-    "json-loader": "^0.5.4",
-    "node-sass": "^3.4.2",
-    "normalize.css": "^4.1.1",
-    "raw-loader": "^0.5.1",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.10.1"
+  "name": "shower-water-saver",
+  "version": "0.0.0",
+  "description": "Shower water saver app",
+  "main": "js/global.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/sebj54/shower-water-saver.git"
   },
-  "keywords": [
-    "react",
-    "webpack",
-    "es6"
-  ]
+  "author": "sebj54",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/sebj54/shower-water-saver/issues"
+  },
+  "dependencies": {
+    "normalize.css": "~5.0.0"
+  }
 }
